bug 910501. Remove the rate-limiting behavior of the "Prevent this page from creating additional dialogs" checkbox. That behavior was unintentionally added and is confusing. r=bz,gavin