dom/base/nsGlobalWindow.cpp
@@ -1030,8 +1030,7 @@ nsGlobalWindow::nsGlobalWindow(nsGlobalWindow *aOuterWindow)
 #endif
     mCleanedUp(false),
     mDialogAbuseCount(0),
-    mStopAbuseDialogs(false),
-    mDialogsPermanentlyDisabled(false)
+    mAreDialogsEnabled(true)
 {
   nsLayoutStatics::AddRef();
 
@@ -2900,44 +2899,6 @@ nsGlobalWindow::ShouldPromptToBlockDialogs()
 }
 
 bool
-nsGlobalWindow::CanDialogCurrentlyBeShown()
-{
-  nsGlobalWindow *topWindow = GetScriptableTop();
-  if (!topWindow) {
-    NS_ERROR("CanDialogCurrentlyBeShown() called without a top window?");
-    return false;
-  }
-
-  // TODO: Warn if no top window?
-  topWindow = topWindow->GetCurrentInnerWindowInternal();
-  if (!topWindow) {
-    return false;
-  }
-
-  // Dialogs are blocked if the content viewer is hidden
-  if (mDocShell) {
-    nsCOMPtr<nsIContentViewer> cv;
-    mDocShell->GetContentViewer(getter_AddRefs(cv));
-
-    bool isHidden;
-    cv->GetIsHidden(&isHidden);
-    if (isHidden) {
-      return false;
-    }
-  }
-
-  if (topWindow->mDialogsPermanentlyDisabled) {
-    return false;
-  }
-
-  if (topWindow->mStopAbuseDialogs) {
-    return !topWindow->DialogsAreBeingAbused();
-  }
-
-  return true;
-}
-
-bool
 nsGlobalWindow::AreDialogsEnabled()
 {
   nsGlobalWindow *topWindow = GetScriptableTop();
@@ -2964,7 +2925,7 @@ nsGlobalWindow::AreDialogsEnabled()
     }
   }
 
-  return !topWindow->mDialogsPermanentlyDisabled;
+  return topWindow->mAreDialogsEnabled;
 }
 
 bool
@@ -3021,27 +2982,11 @@ nsGlobalWindow::ConfirmDialogIfNeeded()
                                      "ScriptDialogPreventTitle", title);
   promptSvc->Confirm(this, title.get(), label.get(), &disableDialog);
   if (disableDialog) {
-    LimitDialogs();
+    DisableDialogs();
     return false;
   }
 
   return true;
-}
-
-void
-nsGlobalWindow::LimitDialogs()
-{
-  nsGlobalWindow *topWindow = GetScriptableTop();
-  if (!topWindow) {
-    NS_ERROR("LimitDialogs() called without a top window?");
-    return;
-  }
-
-  topWindow = topWindow->GetCurrentInnerWindowInternal();
-  // TODO: Warn if no top window?
-  if (topWindow) {
-    topWindow->mStopAbuseDialogs = true;
-  }
 }
 
 void
@@ -3056,7 +3001,7 @@ nsGlobalWindow::DisableDialogs()
   topWindow = topWindow->GetCurrentInnerWindowInternal();
   // TODO: Warn if no top window?
   if (topWindow) {
-    topWindow->mDialogsPermanentlyDisabled = true;
+    topWindow->mAreDialogsEnabled = false;
   }
 }
 
@@ -3072,7 +3017,7 @@ nsGlobalWindow::EnableDialogs()
   // TODO: Warn if no top window?
   topWindow = topWindow->GetCurrentInnerWindowInternal();
   if (topWindow) {
-    topWindow->mDialogsPermanentlyDisabled = false;
+    topWindow->mAreDialogsEnabled = true;
   }
 }
 
@@ -5495,7 +5440,7 @@ nsGlobalWindow::Alert(const nsAString& aString)
 {
   FORWARD_TO_OUTER(Alert, (aString), NS_ERROR_NOT_INITIALIZED);
 
-  if (!CanDialogCurrentlyBeShown()) {
+  if (!AreDialogsEnabled()) {
     return NS_ERROR_NOT_AVAILABLE;
   }
 
@@ -5546,7 +5491,7 @@ nsGlobalWindow::Alert(const nsAString& aString)
     rv = prompt->AlertCheck(title.get(), final.get(), label.get(),
                             &disallowDialog);
     if (disallowDialog)
-      LimitDialogs();
+      DisableDialogs();
   } else {
     rv = prompt->Alert(title.get(), final.get());
   }
@@ -5559,7 +5504,7 @@ nsGlobalWindow::Confirm(const nsAString& aString, bool* aReturn)
 {
   FORWARD_TO_OUTER(Confirm, (aString, aReturn), NS_ERROR_NOT_INITIALIZED);
 
-  if (!CanDialogCurrentlyBeShown()) {
+  if (!AreDialogsEnabled()) {
     return NS_ERROR_NOT_AVAILABLE;
   }
 
@@ -5612,7 +5557,7 @@ nsGlobalWindow::Confirm(const nsAString& aString, bool* aReturn)
     rv = prompt->ConfirmCheck(title.get(), final.get(), label.get(),
                               &disallowDialog, aReturn);
     if (disallowDialog)
-      LimitDialogs();
+      DisableDialogs();
   } else {
     rv = prompt->Confirm(title.get(), final.get(), aReturn);
   }
@@ -5629,7 +5574,7 @@ nsGlobalWindow::Prompt(const nsAString& aMessage, const nsAString& aInitial,
 
   SetDOMStringToNull(aReturn);
 
-  if (!CanDialogCurrentlyBeShown()) {
+  if (!AreDialogsEnabled()) {
     return NS_ERROR_NOT_AVAILABLE;
   }
 
@@ -5687,7 +5632,7 @@ nsGlobalWindow::Prompt(const nsAString& aMessage, const nsAString& aInitial,
                       &inoutValue, label.get(), &disallowDialog, &ok);
 
   if (disallowDialog) {
-    LimitDialogs();
+    DisableDialogs();
   }
 
   NS_ENSURE_SUCCESS(rv, rv);
@@ -5937,7 +5882,7 @@ nsGlobalWindow::Print()
   if (Preferences::GetBool("dom.disable_window_print", false))
     return NS_ERROR_NOT_AVAILABLE;
 
-  if (!CanDialogCurrentlyBeShown()) {
+  if (!AreDialogsEnabled()) {
     return NS_ERROR_NOT_AVAILABLE;
   }
 
@@ -7921,7 +7866,7 @@ nsGlobalWindow::ShowModalDialog(const nsAString& aURI, nsIVariant *aArgs_,
   // pending reflows.
   EnsureReflowFlushAndPaint();
 
-  if (!CanDialogCurrentlyBeShown()) {
+  if (!AreDialogsEnabled()) {
     return NS_ERROR_NOT_AVAILABLE;
   }
 
